.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
18:32:18 **** Build of configuration Debug for project TEST ****
make all 
Building file: ../src/TEST.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/TEST.d" -MT"src/TEST.d" -o "src/TEST.o" "../src/TEST.cpp"
Finished building: ../src/TEST.cpp
 
Building target: TEST
Invoking: Cross G++ Linker
g++  -o "TEST"  ./src/TEST.o   
Finished building target: TEST
 
18:32:35 **** Incremental Build of configuration Debug for project TEST ****
make all 
make: Nothing to be done for `all'.
18:32:39 **** Incremental Build of configuration Debug for project TEST ****
make all 
make: Nothing to be done for `all'.
18:32:41 **** Incremental Build of configuration Debug for project TEST ****
make all 
make: Nothing to be done for `all'.
18:42:57 **** Incremental Build of configuration Debug for project TEST ****
make all 
Building file: ../src/TEST.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/TEST.d" -MT"src/TEST.d" -o "src/TEST.o" "../src/TEST.cpp"
../src/TEST.cpp: In function ‘int main()’:
../src/TEST.cpp:12:8: error: invalid operands of types ‘double’ and ‘double’ to binary ‘operator%’
 if(bal%5.0!=0||amt>bal)
        ^
make: *** [src/TEST.o] Error 1
18:42:58 **** Incremental Build of configuration Debug for project TEST ****
make all 
Building file: ../src/TEST.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/TEST.d" -MT"src/TEST.d" -o "src/TEST.o" "../src/TEST.cpp"
../src/TEST.cpp: In function ‘int main()’:
../src/TEST.cpp:12:8: error: invalid operands of types ‘double’ and ‘double’ to binary ‘operator%’
 if(bal%5.0!=0||amt>bal)
        ^
make: *** [src/TEST.o] Error 1
18:43:19 **** Incremental Build of configuration Debug for project TEST ****
make all 
Building file: ../src/TEST.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/TEST.d" -MT"src/TEST.d" -o "src/TEST.o" "../src/TEST.cpp"
../src/TEST.cpp: In function ‘int main()’:
../src/TEST.cpp:12:9: error: invalid operands of types ‘double’ and ‘int’ to binary ‘operator%’
 if( bal%5 !=0)
         ^
make: *** [src/TEST.o] Error 1
18:43:25 **** Incremental Build of configuration Debug for project TEST ****
make all 
Building file: ../src/TEST.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/TEST.d" -MT"src/TEST.d" -o "src/TEST.o" "../src/TEST.cpp"
Finished building: ../src/TEST.cpp
 
Building target: TEST
Invoking: Cross G++ Linker
g++  -o "TEST"  ./src/TEST.o   
Finished building target: TEST
 
18:43:32 **** Incremental Build of configuration Debug for project TEST ****
make all 
Building file: ../src/TEST.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/TEST.d" -MT"src/TEST.d" -o "src/TEST.o" "../src/TEST.cpp"
../src/TEST.cpp: In function ‘int main()’:
../src/TEST.cpp:12:9: error: invalid operands of types ‘float’ and ‘int’ to binary ‘operator%’
 if( bal%5 !=0)
         ^
make: *** [src/TEST.o] Error 1
18:43:43 **** Incremental Build of configuration Debug for project TEST ****
make all 
Building file: ../src/TEST.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/TEST.d" -MT"src/TEST.d" -o "src/TEST.o" "../src/TEST.cpp"
../src/TEST.cpp: In function ‘int main()’:
../src/TEST.cpp:12:9: error: invalid operands of types ‘double’ and ‘double’ to binary ‘operator%’
 if( bal%5.0 !=0)
         ^
make: *** [src/TEST.o] Error 1
18:43:54 **** Incremental Build of configuration Debug for project TEST ****
make all 
Building file: ../src/TEST.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/TEST.d" -MT"src/TEST.d" -o "src/TEST.o" "../src/TEST.cpp"
../src/TEST.cpp:12:9: error: invalid suffix "f" on integer constant
 if( bal%5f !=0)
         ^
make: *** [src/TEST.o] Error 1
18:43:59 **** Incremental Build of configuration Debug for project TEST ****
make all 
Building file: ../src/TEST.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/TEST.d" -MT"src/TEST.d" -o "src/TEST.o" "../src/TEST.cpp"
../src/TEST.cpp: In function ‘int main()’:
../src/TEST.cpp:12:9: error: invalid operands of types ‘float’ and ‘float’ to binary ‘operator%’
 if( bal%5.0f !=0)
         ^
make: *** [src/TEST.o] Error 1
23:40:44 **** Incremental Build of configuration Debug for project TEST ****
make all 
Building file: ../src/TEST.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/TEST.d" -MT"src/TEST.d" -o "src/TEST.o" "../src/TEST.cpp"
Finished building: ../src/TEST.cpp
 
Building target: TEST
Invoking: Cross G++ Linker
g++  -o "TEST"  ./src/TEST.o   
Finished building target: TEST
 
23:40:47 **** Incremental Build of configuration Debug for project TEST ****
make all 
make: Nothing to be done for `all'.
23:46:05 **** Incremental Build of configuration Debug for project TEST ****
make all 
Building file: ../src/TEST.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/TEST.d" -MT"src/TEST.d" -o "src/TEST.o" "../src/TEST.cpp"
Finished building: ../src/TEST.cpp
 
Building target: TEST
Invoking: Cross G++ Linker
g++  -o "TEST"  ./src/TEST.o   
Finished building target: TEST
 
23:46:08 **** Incremental Build of configuration Debug for project TEST ****
make all 
make: Nothing to be done for `all'.
23:47:16 **** Incremental Build of configuration Debug for project TEST ****
make all 
Building file: ../src/TEST.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/TEST.d" -MT"src/TEST.d" -o "src/TEST.o" "../src/TEST.cpp"
Finished building: ../src/TEST.cpp
 
Building target: TEST
Invoking: Cross G++ Linker
g++  -o "TEST"  ./src/TEST.o   
Finished building target: TEST
 
23:47:18 **** Incremental Build of configuration Debug for project TEST ****
make all 
make: Nothing to be done for `all'.
23:47:27 **** Incremental Build of configuration Debug for project TEST ****
make all 
Building file: ../src/TEST.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/TEST.d" -MT"src/TEST.d" -o "src/TEST.o" "../src/TEST.cpp"
Finished building: ../src/TEST.cpp
 
Building target: TEST
Invoking: Cross G++ Linker
g++  -o "TEST"  ./src/TEST.o   
Finished building target: TEST
 
23:50:28 **** Incremental Build of configuration Debug for project TEST ****
make all 
Building file: ../src/TEST.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/TEST.d" -MT"src/TEST.d" -o "src/TEST.o" "../src/TEST.cpp"
Finished building: ../src/TEST.cpp
 
Building target: TEST
Invoking: Cross G++ Linker
g++  -o "TEST"  ./src/TEST.o   
Finished building target: TEST
 
23:59:37 **** Incremental Build of configuration Debug for project TEST ****
make all 
make: Nothing to be done for `all'.
23:59:40 **** Incremental Build of configuration Debug for project TEST ****
make all 
Building file: ../src/TEST.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/TEST.d" -MT"src/TEST.d" -o "src/TEST.o" "../src/TEST.cpp"
Finished building: ../src/TEST.cpp
 
Building target: TEST
Invoking: Cross G++ Linker
g++  -o "TEST"  ./src/TEST.o   
Finished building target: TEST
 
23:59:45 **** Incremental Build of configuration Debug for project TEST ****
make all 
make: Nothing to be done for `all'.
23:59:46 **** Incremental Build of configuration Debug for project TEST ****
make all 
make: Nothing to be done for `all'.
23:59:47 **** Incremental Build of configuration Debug for project TEST ****
make all 
make: Nothing to be done for `all'.
23:59:48 **** Incremental Build of configuration Debug for project TEST ****
make all 
make: Nothing to be done for `all'.
23:59:51 **** Incremental Build of configuration Debug for project TEST ****
make all 
make: Nothing to be done for `all'.
19:25:04 **** Build of configuration Debug for project TEST ****
make all 
Building file: ../src/TEST.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/TEST.d" -MT"src/TEST.d" -o "src/TEST.o" "../src/TEST.cpp"
Finished building: ../src/TEST.cpp
 
Building target: TEST
Invoking: Cross G++ Linker
g++  -o "TEST"  ./src/TEST.o   
Finished building target: TEST
 
19:25:07 **** Incremental Build of configuration Debug for project TEST ****
make all 
make: Nothing to be done for `all'.
19:25:39 **** Incremental Build of configuration Debug for project TEST ****
make all 
make: Nothing to be done for `all'.
19:25:43 **** Incremental Build of configuration Debug for project TEST ****
make all 
make: Nothing to be done for `all'.
19:26:14 **** Incremental Build of configuration Debug for project TEST ****
make all 
make: Nothing to be done for `all'.
19:26:32 **** Incremental Build of configuration Debug for project TEST ****
make all 
make: Nothing to be done for `all'.
19:26:51 **** Incremental Build of configuration Debug for project TEST ****
make all 
make: Nothing to be done for `all'.
19:26:52 **** Incremental Build of configuration Debug for project TEST ****
make all 
make: Nothing to be done for `all'.
19:27:00 **** Incremental Build of configuration Debug for project TEST ****
make all 
make: Nothing to be done for `all'.
19:39:36 **** Incremental Build of configuration Debug for project TEST ****
make all 
make: Nothing to be done for `all'.
19:39:40 **** Incremental Build of configuration Debug for project TEST ****
make all 
make: Nothing to be done for `all'.
